Fix dark mode file manager dialog

--- a/LANCommander/wwwroot/css/site.css
+++ b/LANCommander/wwwroot/css/site.css
@@ -142,12 +142,24 @@
     margin-top: 4px;
 }
 
-.archive-file-picker-dialog .ant-modal-body {
+.file-picker-dialog .ant-modal-body {
     padding: 0;
 }
 
-.archive-file-picker-dialog .file-manager {
+.file-picker-dialog .file-manager {
     height: calc(100vh - 55px - 53px);
+}
+
+[data-theme="Dark"] .file-manager,
+[data-theme="Dark"] .file-manager-list,
+[data-theme="Dark"] .file-picker-dialog .file-manager tbody tr {
+    background: #141414;
+}
+
+[data-theme="Dark"] .file-manager-tree,
+[data-theme="Dark"] .file-manager-nav {
+    border-color: #303030;
+    background: #141414;
 }
 
 @media screen and (min-width: 768px) {
